[package]
name = "Rust-V"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ "lexer", "assembler", "optimizer" ]

[dependencies]
# Workspace dependencies inside Rust-V
lexer = { path = "../lexer" }
assembler = { path = "../assembler" }
optimizer = { path = "../optimizer" }

# External dependencies
